Fix notification overlay

--- a/Code/src/css/Bandeau_haut.css
+++ b/Code/src/css/Bandeau_haut.css
@@ -151,3 +151,15 @@ body{
     background: #d3d3d3;
 }
 
+/* Overlay fermée par défaut */
+#notif_toggle:not(:checked) + .overlay {
+    display: none;
+}
+
+/* Overlay quand checkbox activé */
+#notif_toggle:checked + .overlay {
+    display: flex;
+}
+
+
+
