Bon le css commence a me casser les couille. JE comprend pas pk j'ai un pb avec page_experience et page_projet. Je pense que je vais les recommencé de 0 mdr.

--- a/Code/src/css/Bandeau_haut.css
+++ b/Code/src/css/Bandeau_haut.css
@@ -11,7 +11,7 @@
 }
 
 body{
- margin: 0px;
+ margin: 0;
 }
 
 /* Conteneur global de la searchbar */
@@ -168,7 +168,3 @@ body{
 #Notif .close_overlay:hover {
     background: #d3d3d3;
 }
-
-
-
-
